; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-cluster.c_unpackmreq_number.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-cluster.c_unpackmreq_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"Invalid cluster message size %d (multi req must be 13)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32)* @unpackmreq_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unpackmreq_number(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp ne i32 %13, 13
  br i1 %14, label %15, label %19

15:                                               ; preds = %4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @luaL_error(i32* %16, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32 %18, i32* %5, align 4
  br label %45

19:                                               ; preds = %4
  %20 = load i32*, i32** %7, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  %22 = call i32 @unpack_uint32(i32* %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 5
  %25 = call i32 @unpack_uint32(i32* %24)
  store i32 %25, i32* %11, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 9
  %28 = call i32 @unpack_uint32(i32* %27)
  store i32 %28, i32* %12, align 4
  %29 = load i32*, i32** %6, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @lua_pushinteger(i32* %29, i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @lua_pushinteger(i32* %32, i32 %33)
  %35 = load i32*, i32** %6, align 8
  %36 = call i32 @lua_pushnil(i32* %35)
  %37 = load i32*, i32** %6, align 8
  %38 = load i32, i32* %12, align 4
  %39 = call i32 @lua_pushinteger(i32* %37, i32 %38)
  %40 = load i32*, i32** %6, align 8
  %41 = call i32 @lua_pushboolean(i32* %40, i32 1)
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %9, align 4
  %44 = call i32 @lua_pushboolean(i32* %42, i32 %43)
  store i32 6, i32* %5, align 4
  br label %45

45:                                               ; preds = %19, %15
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i32 @unpack_uint32(i32*) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
